--- a/index.html
+++ b/index.html
@@ -1,122 +1,131 @@
-<! DOCTYPE html>
+<!DOCTYPE html>
 <html>
- <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AluraBooks</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>AluraBooks</title>
+        <link rel="stylesheet" href="style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="reset.css">
-    <link
+        <link rel="stylesheet" href="reset.css">
+        <link
   rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
 />
- </head>
-
+    </head>
+   
     <body>
-      <header class="cabeçalho">
-         <div class="container">
-            <input type="checkbox" id="menu" class="conteiner__botao">
-            <label for="menu">
-            <span class="cabeçalho__menu hamburguer container__imagem"></span>
-         </label>
-         <ul class="lista-menu">
-         <li class="lista-menu__titulo">Categorias</li>
-        <li class="lista-menu__item">
-         <a href="#" class="lista-menu__link">Programação</a>
-       </li>
-       <li class="lista-menu__link">Front-end</a>
-       </li>
-       <li class="lista-menu__link">
-         <a href="#" class="lista-menu__link">Infraestrutura</a>
-       </li>
-       <li class="lista-menu__item">
-         <a href="#" class="lista-menu__link">Business</a>
+         <header class="cabeçalho">
+             <div class="container">
+                <input type="checkbox" id="menu" class="container__botao">
+                <latel for="menu">
+                    <span class="cabeçalho__menu hamburguer container__imagem"></span>
+                    </label>
+                    <ul class="lista-menu">
+                        <li class="lista-item"__titulo">Categorias</li>
+                        <li class="lista-menu__link">
+                            <a href="#" class="lista-menu__link">Programação</a>
+                            </li>
+                            <li class="lista-menu__item">
+                                <a href="#" class="lista-menu__link">Front-end</a>
+                            </li>
+                            <li class="lista-menu__item">
+                                 <a href="#" class="lista-menu__link">Infraestrutura</a>
+                            </li>
+                             <li class="lista-menu__item">
+                                <a href="#" class="lista-item__link">Bussines</a>
 
-       </li>
-       <li class="lista-item__item">
-       <a href="#" class="lista-menu__link">Design &  UX</a>
-
-      </li>
-      </ul>
-         <img src="img/Logo.svg" alt="Logo da Alurabooks" class="container_imagem">
-         <img src=" img/Favoritos.svg" alt="Logo da Alurabooks" class="container_imagem">
-         <img src=" img/Compras.svg" alt="Logo da Alurabooks" class="container_imagem">
-         <img src=" img/Usuário.svg" alt="Logo da Alurabooks" class="container_imagem">
-         <span class="cabeçalho_menu-hanburguer"></span>
-         <div class="container">
-         </div>
-      </header>
-      <section class="banner">
-      <h2 class="banner__titulo">já sabe por onde começar?</h2>
-      <p class="banner__texto">encontro em nessa
-         estante o que precisa para seu desenvolvimento!</p>
-         <input type="search" class="banner__pesquisa"
-         placeholder="qual será sua próxima leitura">
-      </section>
-      <h2>
-         <section class="carrosel">
-            <h2 class="carrsel__titilo">novos lançamentos</h2>
-            <!-- Slider main container -->
+                            </li>
+                             <li class="lista-thub">
+                                </ul>
+                        <img src="img/Logo.svg" alt="Logo da Alurabooks" class="container_imagem">
+                        <img src="img/Favoritos.svg" alt="Logo da Alurabooks" class="container_imagem">
+                        <img src="img/Compras.svg" alt="Logo da Alurabooks" class="container_imagem">
+                        <img src="img/Usuário.svg" alt="Logo da Alurabooks" class="container_imagem">
+             <span class="cabeçalho_menu-hamburguer"></span>
+             <div class="container">
+         <div>
+          </header>
+          <section class="banner">
+            <h2 class="banner__titulo">Já sabe por onde começar?</h2>
+            <p class="banner__texto">Encontro em nossa
+                estante o que precisa para seu desenvolvimento!</p>
+                <input type="search" class="banner__pesquisa"
+                placeholder="Qual será sua próxima leitura?">
+          </section>
+          <section class="carrosel">
+          <h2 class="carrosel__titulo">Novos lançamentos</h2>
+          <!-- Slider main container -->
 <div class="swiper">
-   <!-- Additional required wrapper -->
-   <div class="swiper-wrapper">
-     <!-- Slides -->
-     <div class="swiper-slide"><img src="img/Acessibilidade.png" alt="Livro sobre Acessibilidade da AluraBooks"></div>
-     <div class="swiper-slide"><img src="img/Angular.png" alt="Livro sobre Angular da AluraBooks"></div>
-     <div class="swiper-slide"><img src="img/ApacheKafKa.png" alt="Livro sobre ApacheKafKa da AluraBooks"></div>
-      <div class="swiper-slide"><img src="img/Arquitetura.png" alt="Livro sobre Arquitetura da AluraBooks"></div>
+    <!-- Additional required wrapper -->
+    <div class="swiper-wrapper">
+      <!-- Slides -->
+      <div class="swiper-slide"><img src="img/Acessibilidade.png" alt="Livro sobre Acessibilidade da AluraBooks"></div>
+      <div class="swiper-slide"><img src="img/Angular.png" alt="Livro sobre Angular da AluraBooks"></div>
+      <div class="swiper-slide"><img src="img/ApacheKafka.png" alt="Livro sobre ApacheKafka da AluraBooks"></div>
+      <div class="swiper-slide"><img  src="img/Arquitetura.png" alt="Livro sobre Arquitetura da AluraBooks"></div>
+      <div class="swiper-slide"><img src="img/Construct2.png" alt="Livro sobre Construct2 da AluraBooks"></div>
+      <div class="swiper-slide"><img src="img/Gestão.png" alt="Livro sobre Gestão da AluraBooks"></div>
       <div class="swiper-slide"><img src="img/Gestão2.png" alt="Livro sobre Gestão2 da AluraBooks"></div>
       <div class="swiper-slide"><img src="img/Guia Front-end.png" alt="Livro sobre Guia da AluraBooks"></div>
       <div class="swiper-slide"><img src="img/Javascript.png" alt="Livro sobre Javascript da AluraBooks"></div>
       <div class="swiper-slide"><img src="img/Liderança.png" alt="Livro sobre Liderança da AluraBooks"></div>
       <div class="swiper-slide"><img src="img/MEAN.png" alt="Livro sobre MEAN da AluraBooks"></div>
       <div class="swiper-slide"><img src="img/MetricasAgeis.png" alt="Livro sobre MetricasAgeis da AluraBooks"></div>
-      <div class="swiper-slide"><img src="img/Portugol.png" alt="Livro sobre Portugol da AluraBooks"></div>
+      <div class="swiper-slide"><img src="img/Nodejs.png" alt="Livro sobre Nodejs da AluraBooks"></div>
+      <div class="swiper-slide"><img  src="img/Portugol.png" alt="Livro sobre Portugol da AluraBooks"></div>
+      <div class="swiper-slide"><img src="img/ReactNative.png" alt="Livro sobre ReactNative da AluraBooks"></div>
       <div class="swiper-slide"><img src="img/Tuning.png" alt="Livro sobre Tuning da AluraBooks"></div>
-   </div>
-   <!-- If we need pagination -->
-   <div class="swiper-pagination"></div>
- 
-   <!-- If we need navigation buttons -->
-   <div class="swiper-button-prev"></div>
-   <div class="swiper-button-next"></div>
- 
-   <!-- If we need scrollbar -->
+      <div class="swiper-slide"><img src="img/UX.png" alt="Livro sobre UX da AluraBooks"></div>
+    </div>
+    <!-- If we need pagination -->
+    <div class="swiper-pagination"></div>
+  
+    <!-- If we need navigation buttons -->
+    <div class="swiper-button-prev"></div>
+    <div class="swiper-button-next"></div>
+  
+    <!-- If we need scrollbar -->
+</div>
+  <div class="card">
 
-   </div>
-     <div class="card">
+    <div class="card__descricao">
 
-      <div class="card__descricao">
+        <div class="descricao">
+            <h3 class="descricao_titulo">Talvez você também se interesse por...</h3>
+            <h2 class="descricao_titulo-livro">Angular 11 e Firebaser</h2>
+            <p class="descricao__texto">Construindo uma aplicação integrada com
+                a plataforma do Google.</p>
+            </div>
 
-         <div class="descricao">
+            <img src="img/Angular.svg" class="descricao__imagem">
+    </div>
+  </div>
+  <div class="card__botoes">
 
-            <h3 class="descricao__titulo">Talvez você também se interesse por...</h3>
+    <ul class="botoes">
+        <li class="botoes__item"><img src="img/Favoritos.svg"
+            alt="Favoritar livro"></li>
+        <li class="botoes__item"><img src="img/Compras.svg"
+        alt="Adicionar no carrinho de compras"></li>
+    </ul>
 
-            <h2 class="descricao__titulo-livro">Angular 11 e firebase</h2>
-            <p class="dscricao__texto">Construindo uma aplicação integrada com
-                a plataforma do Google.</p> 
-         </div>
-
-         <img src="img/Angular.svg" class="descricao__imagem">
-             </div>
-         </div>
-     </div>
-         </section>
-         <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
-      </h2>
-      <script>swiper = new Swiper('.swiper',
-
-         spaceBetween: 10,
-         SlidesPerView: 3,
-         pagination: {
-         el: '.swiper-pagination',
-         type: 'bullets',
-       });
-
-      </script>
-    </body>
+    <a href="#" class="botoes__ancora">Saiba mais</a>
+  </div>
+</section>
+          <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+        </h2>
+        <script>
+            const swiper = nem Swiper ('.swiper',{
+                spaceBetween: 10;
+                slidesPerView: 3;
+                pagination:
+                    el: '.swiper-pagination',
+                    type: 'bullets',
+            };
+                });
+            </script>
+        </body>
 
 </html>
