--- a/index.html
+++ b/index.html
@@ -114,6 +114,20 @@
     <a href="#" class="botoes__ancora">Saiba mais</a>
   </div>
 </section>
+<section class="topicos">
+        <a href="#" class="topicos__link">Android</a>
+    <h2 class="topicos__titulo">TÓPICOS VISITADOS RECENTEMENTE</h2>
+    <h1 class="topicos__lista">
+        <li class="topicos__item">
+            <a href="#" class="topicos__link">Android</a>
+        </li>
+            <li class="topicos__item">
+                <a href="#" class="topicos__link"></a>
+        </li>
+            </li>
+        </ul>
+    </ul>
+</section>
           <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
         </h2>
         <script>
