--- a/index.html
+++ b/index.html
@@ -118,28 +118,44 @@
         <a href="#" class="topicos__link">Android</a>
     <h2 class="topicos__titulo">TÓPICOS VISITADOS RECENTEMENTE</h2>
     <h1 class="topicos__lista">
+    <li class="topicos__item">
+    </li>
         <li class="topicos__item">
-            <a href="#" class="topicos__link">Android</a>
+        <a href="#" class="topicos__link"Marketing Digital></a>
+         </li>
+        <li class="topicos__item">
+        <a href="#" class="topicos__link"Agile></a>
         </li>
-            <li class="topicos__item">
-                <a href="#" class="topicos__link"></a>
+        <li class="topicos__item">
+        <a href="#" class="topicos__link"Startups></a>
+        </li>
+        <li class="topicos__item">
+        <a href="#" class="topicos__link"HTML e CSS></a>
+        </li>
+        <li class="topicos__item">
+        <a href="#" class="topicos__link"Python></a>
+        </li>
+        <li class="topicos__item">
+        <a href="#" class="topicos__link"00></a>
+        </li>
+        <li class="topicos__item">
+        <a href="#" class="topicos__link"Java></a>
         </li>
             </li>
         </ul>
     </ul>
 </section>
+<section class="contato">
+    <h2 class="contato__titulo">Fique por dentro das novidades !</h2>
+    <p class="contato__text">Atualizaçoes de e-books,novos livros, promoçoes e outros</p>
+    <input type="email"placeholder= cadastre se e-mail
+    class="contato__email">
+</section>
           <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
         </h2>
         <script>
-            const swiper = nem Swiper ('.swiper',{
-                spaceBetween: 10;
-                slidesPerView: 3;
-                pagination:
-                    el: '.swiper-pagination',
-                    type: 'bullets',
-            };
-                });
-            </script>
+            const swiper = new Swiper ('.swiper',{spaceBetween: 10, slidesPerView: 3, pagination: { el: '.swiper-pagination',
+            type: 'bullets',},});</script>
         </body>
 
 </html>
